package construccion.prototype;

public interface PrototypeShapes  extends Cloneable{
  PrototypeShapes clone() throws CloneNotSupportedException;
}
